--- a/scripts/autoexec.cfg
+++ b/scripts/autoexec.cfg
@@ -1,2 +1,42 @@
-alias +mforward "-back;+forward"alias +mbackward "-forward;+back"alias +mleft "-moveright;+moveleft"alias +mright "-moveleft;+moveright"alias -mforward "-forward"alias -mbackward "-back"alias -mleft "-moveleft"alias -mright "-moveright"bind W +mforwardbind S +mbackwardbind A +mleftbind D +mrightmat_antialias 0rate 60000cl_cmdrate 66cl_updaterate 66cl_interp 0.0325cl_interp_ratio 1cl_pred_optimize 2cl_smooth 0cl_smoothtime 0.01cl_interp 0cl_interp_ratio 1rate 60000cl_updaterate 100cl_cmdrate 100cl_pred_optimize 2cl_smooth 0cl_smoothtime 0.01map_background preload_room; wait 10; disconnectcl_interp 0.000010cl_interp_ratio 1rate 60000cl_updaterate 66cl_cmdrate66viewmodel_fov 80fov_desired 90hud_combattext_batching 1tf_particles_disable_weather 1bind w +forwardcrosshair 1mat_motion_blur_enabled 0
-
+alias +mforward "-back;+forward"
+alias +mbackward "-forward;+back"
+alias +mleft "-moveright;+moveleft"
+alias +mright "-moveleft;+moveright"
+alias -mforward "-forward"
+alias -mbackward "-back"
+alias -mleft "-moveleft"
+alias -mright "-moveright"
+bind W +mforward
+bind S +mbackward
+bind A +mleft
+bind D +mright
+mat_antialias 0
+rate 60000
+cl_cmdrate 66
+cl_updaterate 66
+cl_interp 0.0325
+cl_interp_ratio 1
+cl_pred_optimize 2
+cl_smooth 0
+cl_smoothtime 0.01
+cl_interp 0
+cl_interp_ratio 1
+rate 60000
+cl_updaterate 100
+cl_cmdrate 100
+cl_pred_optimize 2
+cl_smooth 0
+cl_smoothtime 0.01
+map_background preload_room; wait 10; disconnect
+cl_interp 0.000010
+cl_interp_ratio 1
+rate 60000
+cl_updaterate 66
+cl_cmdrate66
+viewmodel_fov 80
+fov_desired 90
+hud_combattext_batching 1
+tf_particles_disable_weather 1
+bind w +forward
+crosshair 1
+mat_motion_blur_enabled 0
